# python-get-weather

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  python-package.yml
templates/: index.html
