[project]
name = "python-get-weather"
version = "0.1.0"
description = "python script that calls National Weather Services API"
authors = [
    {name = "Vedant",email = "vsagar@wisc.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "httpx (>=0.20)",
    "uvicorn (>=0.3)",
    "fastapi (>=0.1)",
    "aiofile (>=3.9.0,<4.0.0)",
    "jinja2 (>=3.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.security.dependencies]
bandit = "1.8.3"
